[package]
name = "winutils-rs"
version = "0.2.1"
authors = ["rafawo <rafawo1@hotmail.com>"]
license = "MIT"
edition = "2018"
description = "Rust wrappers of various Windows API and definitions."
repository = "https://github.com/rafawo/winutils-rs"
readme = "README.md"
keywords = ["windows", "winutils"]
categories = ["api-bindings", "os::windows-apis"]

[dependencies]
widestring = "0.4.0"
winapi = { version = "0.3.6", features = [
    "combaseapi",
    "errhandlingapi",
    "handleapi",
    "ioapiset",
    "rpc",
    "rpcdce",
    "securitybaseapi",
    "synchapi",
    "winbase",
    "winerror",
    "winioctl",
] }
